versions/v2.9/modules/en/pages/security/hardening-guides/hardening-guides.adoc
= Self-Assessment and Hardening Guides for {rancher-product-name}
:page-languages: [en, zh]
:revdate: 2025-05-22
:page-revdate: {revdate}
:community-path: reference-guides/rancher-security/hardening-guides/index.adoc 
:product-path: security/hardening-guides/hardening-guides.adoc
ifeval::["{build-type}" != "community"]
:xref-rke2-hardening-guide: xref:security/hardening-guides/rke2/rke2.adoc
:xref-rke1-hardening-guide: xref:security/hardening-guides/rke1/rke1.adoc
:xref-k3s-hardening-guide: xref:security/hardening-guides/k3s/k3s.adoc
:xref-about-rancher-selinux: xref:security/selinux-rpm/about-rancher-selinux.adoc
:xref-k3s-self-assessment-17: xref:security/hardening-guides/k3s/self-assessment-guide-with-cis-v1.7-k8s-v1.25-v1.26-v1.27.adoc
:xref-k3s-self-assessment-124: xref:security/hardening-guides/k3s/self-assessment-guide-with-cis-v1.24-k8s-v1.24.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-rke2-hardening-guide: xref:reference-guides/rancher-security/hardening-guides/rke2-hardening-guide/index.adoc
:xref-rke1-hardening-guide: xref:reference-guides/rancher-security/hardening-guides/rke1-hardening-guide/index.adoc
:xref-k3s-hardening-guide: xref:reference-guides/rancher-security/hardening-guides/k3s-hardening-guide/index.adoc
:xref-about-rancher-selinux: xref:reference-guides/rancher-security/selinux-rpm/about-rancher-selinux.adoc
:xref-k3s-self-assessment-17: xref:reference-guides/rancher-security/hardening-guides/k3s-hardening-guide/k3s-self-assessment-guide-with-cis-v1.7-k8s-v1.25-v1.26-v1.27.adoc
:xref-k3s-self-assessment-124: xref:security/hardening-guides/k3s/self-assessment-guide-with-cis-v1.24-k8s-v1.24.adoc
endif::[]

Rancher provides specific security hardening guides for each supported Rancher version's Kubernetes distributions.

== Rancher Kubernetes Distributions

Rancher uses the following Kubernetes distributions:

* https://rancher.com/docs/rke/latest/en/[*RKE*], Rancher Kubernetes Engine, is a CNCF-certified Kubernetes distribution that runs entirely within Docker containers.
* https://documentation.suse.com/cloudnative/rke2/latest/en/introduction.html[*RKE2*] is a fully conformant Kubernetes distribution that focuses on security and compliance within the U.S. Federal Government sector.
* https://documentation.suse.com/cloudnative/k3s/latest/en/introduction.html[*K3s*] is a fully conformant, lightweight Kubernetes distribution. It is easy to install, with half the memory requirement of upstream Kubernetes, all in a binary of less than 100 MB.

To harden a Kubernetes cluster that's running a distribution other than those listed, refer to your Kubernetes provider docs.

== Hardening Guides and Benchmark Versions

Each self-assessment guide is accompanied by a hardening guide. These guides were tested alongside the listed Rancher releases. Each self-assessment guides was tested on a specific Kubernetes version and CIS benchmark version. If a CIS benchmark has not been validated for your Kubernetes version, you can use the existing guides until a guide for your version is added.

=== RKE Guides

|===
| Kubernetes Version | CIS Benchmark Version | Self Assessment Guide | Hardening Guides

| Kubernetes v1.23
| CIS v1.23
| xref:security/hardening-guides/rke1/self-assessment-guide-with-cis-v1.23-k8s-v1.23.adoc[Link]
| {xref-rke1-hardening-guide}[Link]

| Kubernetes v1.24
| CIS v1.24
| xref:security/hardening-guides/rke1/self-assessment-guide-with-cis-v1.24-k8s-v1.24.adoc[Link]
| {xref-rke1-hardening-guide}[Link]

| Kubernetes v1.25/v1.26/v1.27
| CIS v1.7
| xref:security/hardening-guides/rke1/self-assessment-guide-with-cis-v1.7-k8s-v1.25-v1.26-v1.27.adoc[Link]
| {xref-rke1-hardening-guide}[Link]
|===

=== {rke2-product-name} Guides

|===
| Type | Kubernetes Version | CIS Benchmark Version | Self Assessment Guide | Hardening Guides

| Rancher provisioned RKE2
| Kubernetes v1.23
| CIS v1.23
| xref:security/hardening-guides/rke2/self-assessment-guide-with-cis-v1.23-k8s-v1.23.adoc[Link]
| {xref-rke2-hardening-guide}[Link]

| Rancher provisioned RKE2
| Kubernetes v1.24
| CIS v1.24
| xref:security/hardening-guides/rke2/self-assessment-guide-with-cis-v1.24-k8s-v1.24.adoc[Link]
| {xref-rke2-hardening-guide}[Link]

| Rancher provisioned RKE2
| Kubernetes v1.25/v1.26/v1.27
| CIS v1.7
| xref:security/hardening-guides/rke2/self-assessment-guide-with-cis-v1.7-k8s-v1.25-v1.26-v1.27.adoc[Link]
| {xref-rke2-hardening-guide}[Link]

| Standalone RKE2
| Kubernetes v1.25/v1.26/v1.27
| CIS v1.7
| https://documentation.suse.com/cloudnative/rke2/latest/en/security/cis_self_assessment123.html[Link]
| https://documentation.suse.com/cloudnative/rke2/latest/en/security/hardening_guide.html[Link]
|===

=== {k3s-product-name} Guides

|===
| Type | Kubernetes Version | CIS Benchmark Version | Self Assessment Guide | Hardening Guides

| Rancher provisioned K3s cluster
| Kubernetes v1.23
| CIS v1.23
| xref:security/hardening-guides/k3s/self-assessment-guide-with-cis-v1.23-k8s-v1.23.adoc[Link]
| {xref-k3s-hardening-guide}[Link]

| Rancher provisioned K3s cluster
| Kubernetes v1.24
| CIS v1.24
| xref:security/hardening-guides/k3s/self-assessment-guide-with-cis-v1.24-k8s-v1.24.adoc[Link]
| {xref-k3s-hardening-guide}[Link]

| Rancher provisioned K3s cluster
| Kubernetes v1.25/v1.26/v1.27
| CIS v1.7
| {xref-k3s-self-assessment-17}[Link]
| {xref-k3s-hardening-guide}[Link]

| Standalone K3s
| Kubernetes v1.22 up to v1.24
| CIS v1.23
| https://documentation.suse.com/cloudnative/k3s/latest/en/security/self-assessment-1.8.html[Link]
| https://documentation.suse.com/cloudnative/k3s/latest/en/security/hardening-guide.html[Link]
|===

== Rancher with SELinux

https://en.wikipedia.org/wiki/Security-Enhanced_Linux[Security-Enhanced Linux (SELinux)] is a kernel module that adds extra access controls and security tools to Linux. Historically used by government agencies, SELinux is now industry-standard. SELinux is enabled by default on RHEL and CentOS.

To use Rancher with SELinux, we recommend {xref-about-rancher-selinux}[installing] the `rancher-selinux` RPM.
